adding login screen

--- a/style.css
+++ b/style.css
@@ -11,9 +11,10 @@ body {
     border-radius: 10px;
     width: 450px;
     margin: 0 auto 20px auto;
+    cursor: default;
 }
 
-#code-entry-container {
+.terminal {
     width: 380px;
     border: lime 1px solid;
     border-radius: 2px;
@@ -21,19 +22,17 @@ body {
     font-family: monospace;
     font-size: large;
     background-color: black;
-}
-
-#code-entry {
     padding: 10px 5px;
-    font-size: large;
+}
+.terminal-text {
+    color: #00ff00;
     background-color: black;
     font-family: monospace;
-    color: #00ff00;
     border: none;
     outline: none;
 }
 
-#code-submit {
+.main-button {
     padding: 10px;
     background-color: red;
     font-family: "Stencil", Times, serif;
@@ -44,7 +43,7 @@ body {
     margin-bottom: 10px;
 }
 
-#code-submit:hover {
+.main-button:hover {
     background-color: #770000;
     cursor: pointer;
 }
@@ -56,18 +55,18 @@ body {
 
 .saved-vid-link {
     padding: 10px;
-    background-color: lime;
+    background-color: black;
     font-family: "Stencil", Times, serif;
     font-style: italic;
-    color: black;
+    color: lime;
     border-radius: 50px;
-    border: black 3px solid;
+    border: lime 3px solid;
     margin-bottom: 10px;
     width: 200px;
     margin: 10px auto 0 auto;
 }
 
 .saved-vid-link:hover {
-    background-color: #009900;
+    background-color: #003300;
     cursor: pointer;
 }
