--- a/style.css
+++ b/style.css
@@ -70,3 +70,40 @@ body {
     background-color: #003300;
     cursor: pointer;
 }
+
+#mission-controls {
+    margin-top: 20px;
+}
+
+#result-screen {
+    max-width: 500px;
+    border: 3px solid lime;
+    margin: auto;
+    text-align: center;
+    border-radius: 5px;
+}
+
+#result-title {
+    text-decoration: underline;
+}
+
+#result-container {
+    width: 230px;
+    font-size: 1.5em;
+    display: flex;
+    flex-direction: row;
+    margin: 0 auto 20px auto;
+}
+
+#result-text {
+    width: 120px;
+    border: 1px dashed lime;
+    margin: auto;
+    border-radius: 3px;
+    transform: rotate(-5deg);
+    font-size: 1em;
+}
+
+#return-button {
+    margin-top: 20px;
+}
